# openapi-to-mcp

./: .containerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-or-bug-analysis.yml  finding.yml  sub-task.yml
.github/workflows/: ci.yml  governance.yml  release.yml  security.yml
Containerfiles/: Containerfile.dev  Containerfile.dev.compat  Containerfile.prod  Containerfile.prod.compat  Containerfile.test  Containerfile.test.compat  README.md
docs/adr/: 0001-python-fastapi-fastmcp-bootstrap.md  0002-fix-streamable-native-lifespan.md  0003-metrics-endpoint-opentelemetry-use-alignment.md  0004-otlp-telemetry-red-use-and-metrics-deprecation.md  0005-optional-prometheus-compatibility-toggle.md  README.md
docs/diagrams/: 0001-governance-mindmap.md  0002-class-bootstrap-core.md  0003-sequence-startup-and-tool-call.md  0004-hexagonal-bootstrap-boundaries.md  0005-class-streamable-lifecycle-fix.md  0006-sequence-streamable-request-lifecycle-fix.md  0007-class-metrics-observability.md  0008-sequence-metrics-scrape-and-invocation.md  0009-class-telemetry-otlp-red-use.md  0010-sequence-http-request-red-and-otlp-export.md  0011-class-optional-prometheus-telemetry.md  0012-sequence-conditional-metrics-scrape.md  README.md
docs/interfaces/: 0001-openapi-to-mcp-server-openapi.yaml  README.md
docs/policies/: 00-policy-of-policies.md  01-index.md  02-lifecycle.md  (+22 more)
scripts/: container-build.sh  container-test.sh  governance-check.sh  pr-traceability-check.sh
(+32 files in other folders)
